@@ -509,6 +509,7 @@ autorates</B></P>
 		<TD><P>float</P></TD>
 		<TD><P>As wonWhenSeenFlop, but for showdown.</P></TD>
 	</TR>
+
 	<TR VALIGN=TOP>
 		<TD><P>stealAttemptChance</P></TD>
 		<TD><P>int</P></TD>
@@ -538,6 +539,37 @@ autorates</B></P>
 		<TD><P>foldedSbToSteal</P></TD>
 		<TD><P>int</P></TD>
 		<TD><P>Player folded SB to steal attempt</P></TD>
+	</TR>
+
+	<TR VALIGN=TOP>
+		<TD><P>contBetChance</P></TD>
+		<TD><P>int</P></TD>
+		<TD><P>Player had chance to make continuation bet</P></TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD><P>contBetDone</P></TD>
+		<TD><P>int</P></TD>
+		<TD><P>Player used chance to make continuation bet</P></TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD><P>secondBarrelChance</P></TD>
+		<TD><P>int</P></TD>
+		<TD><P>Player had chance to make second barrel bet</P></TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD><P>secondBarrelDone</P></TD>
+		<TD><P>int</P></TD>
+		<TD><P>Player used chance to make second barrel bet</P></TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD><P>thirdBarrelChance</P></TD>
+		<TD><P>int</P></TD>
+		<TD><P>Player had chance to make third barrel bet</P></TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD><P>thirdBarrelDone</P></TD>
+		<TD><P>int</P></TD>
+		<TD><P>Player used chance to make third barrel bet</P></TD>
 	</TR>
 </TABLE>
 <P></P>
