@@ -347,7 +347,7 @@ This program is licensed under the AGPL3, see docs"""+os.sep+"agpl-3.0.txt")
 		self.window = gtk.Window(gtk.WINDOW_TOPLEVEL)
 		self.window.connect("delete_event", self.delete_event)
 		self.window.connect("destroy", self.destroy)
-		self.window.set_title("Free Poker DB - version: alpha1+, git31")
+		self.window.set_title("Free Poker DB - version: alpha1+, git33")
 		self.window.set_border_width(1)
 		self.window.set_size_request(950,400)
 		self.window.set_resizable(True)
